--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-http-auth-interceptor": "^1.0.4",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ngx-infinite-scroll": "^13.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
